@@ -1,5 +1,10 @@
 2002-05-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
+	* src/chat_window.cpp: Commented out some lines I
+	use for testing.
+
+2002-05-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>
+
 	* src/chat_window.cpp (gnomemeeting_chat_window_text_insert):
 	(gnomemeeting_init_chat_window): Removed deprecated stuff and
 	ported to GtkTextView|Buffer|Tag|Mark|Iter
